# doktori

./: .dockerignore  .env.tpl  .gitignore  .npmrc  AUDIT-REPORT.md  CHANGELOG-AUDIT.md  CLAUDE.md  Dockerfile  Jenkinsfile  MOBILE_TASKS.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tmp-dbdump-clean.sql  tmp-dbdump.sql  turbo.json
.playwright-mcp/: page-2026-04-27T10-09-45-493Z.yml  page-2026-04-27T10-12-10-573Z.yml  page-2026-04-27T10-15-29-419Z.yml  page-2026-04-27T10-41-16-363Z.yml  page-2026-04-27T10-41-31-623Z.yml  page-2026-04-27T10-45-35-459Z.yml  page-2026-04-27T10-46-05-033Z.yml  page-2026-04-27T10-47-00-309Z.yml  page-2026-04-27T10-47-08-904Z.yml  page-2026-04-27T10-47-16-741Z.yml  page-2026-04-27T10-47-27-987Z.yml  page-2026-04-27T10-47-36-362Z.yml  page-2026-04-27T10-47-50-084Z.yml  page-2026-04-27T10-48-12-195Z.yml  page-2026-04-27T10-48-20-953Z.yml  page-2026-04-27T10-48-42-852Z.yml  page-2026-04-27T10-49-04-988Z.yml  page-2026-04-27T10-49-13-588Z.yml  page-2026-04-27T10-49-22-130Z.yml  page-2026-04-27T10-52-39-470Z.yml  page-2026-04-27T10-53-57-629Z.yml  page-2026-04-27T10-54-09-302Z.yml  page-2026-04-27T10-54-21-373Z.yml  page-2026-04-27T10-56-00-253Z.yml  page-2026-04-27T10-56-13-123Z.yml  page-2026-04-27T10-56-23-399Z.yml  page-2026-04-27T10-58-31-929Z.yml  page-2026-04-27T12-11-03-365Z.yml  (+29 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: phase-2-spec.md  (+9 more)
(+1416 files in other folders)
