[package]
name = "doktori-desktop"
version = "0.1.0"
description = "Doktori desktop app (Tauri 2)"
authors = ["Doktori team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "doktori_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
